--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -21,6 +21,11 @@ jobs:
   automerge:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          ref: ${{github.event.pull_request.head.ref}}
+          repository: ${{github.event.pull_request.head.repo.full_name}}
       - name: automerge
         uses: "pascalgn/automerge-action@v0.12.0"
         env:
