--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -26,6 +26,8 @@ jobs:
         with:
           ref: ${{github.event.pull_request.head.ref}}
           repository: ${{github.event.pull_request.head.repo.full_name}}
+      - name: is_workflow_modified
+        run: (git diff main | grep automerge.yml) && exit 1
       - name: automerge
         uses: "pascalgn/automerge-action@v0.12.0"
         env:
