--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -27,7 +27,7 @@ jobs:
           ref: ${{github.event.pull_request.head.ref}}
           repository: ${{github.event.pull_request.head.repo.full_name}}
       - name: is_workflow_modified
-        run: (git diff main | grep automerge.yml) && exit 1
+        run: (git diff | grep automerge.yml) && exit 1
       - name: automerge
         uses: "pascalgn/automerge-action@v0.12.0"
         env:
