--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -1,4 +1,4 @@
-name: automerge
+name: jopa
 on:
   pull_request_target:
     types:
@@ -18,7 +18,7 @@ on:
       - completed
   status: {}
 jobs:
-  automerge:
+  automerge1:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -29,7 +29,7 @@ jobs:
       - name: Checking that workflow file did not change
         run: git diff ${{github.event.pull_request.head.ref}} --no-patch --exit-code .github/workflows/automerge.yml
       - name: automerge
-        uses: "pascalgn/automerge-action@v0.12.0"
+        lala: "pascalgn/automerge-action@v0.12.0"
         env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
           MERGE_LABELS: ""
