--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -27,7 +27,7 @@ jobs:
           ref: ${{github.event.pull_request.head.ref}}
           repository: ${{github.event.pull_request.head.repo.full_name}}
       - name: Checking that workflow file did not change
-        run: git diff ${{github.event.pull_request.head.ref}} --no-patch --exit-code .github/workflows/automerge.yml
+        run: git diff ${{github.event.pull_request.head.ref}}~1 --exit-code .github/workflows/automerge.yml
       - name: automerge
         uses: "pascalgn/automerge-action@v0.12.0"
         env:
